<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/sky_bg"
        tools:context=".DetailsActivity">

    <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="80dp"
            android:layout_marginLeft="20dp"
            android:elevation="10dp"
            app:cardCornerRadius="15dp"
            android:layout_marginRight="20dp">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/green_gray">
            <TextView
                    android:id="@+id/tvCityName"
                    android:text="@string/city_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="15"
                    android:paddingTop="150dp"
                    android:textAlignment="center"
                    android:textSize="35sp"/>
            <TextView
                    android:id="@+id/tvCountry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/city_country_string"
                    android:layout_below="@id/tvCityName"
                    android:textAlignment="center"
                    android:textSize="18sp"/>

            <TextView
                    android:id="@+id/tvTemperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/temperature_string"
                    android:textSize="50sp"
                    android:paddingLeft="5dp"
                    android:layout_alignParentBottom="true"
                    android:paddingBottom="5dp"
                    android:layout_gravity="bottom|start"/>
            <TextView
                    android:id="@+id/tvDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description_string"
                    android:paddingLeft="5dp"
                    android:layout_above="@id/tvTemperature"
                    android:textSize="25sp"/>

            <TextView
                    android:id="@+id/tvWind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wind_string"
                    android:layout_toRightOf="@id/tvTemperature"
                    android:layout_alignBottom="@id/tvTemperature"
                    android:paddingBottom="5dp"
                    android:textSize="18sp"
                    android:paddingLeft="20dp"
                    android:layout_toEndOf="@id/tvTemperature"/>

            <TextView
                    android:id="@+id/tvHumidity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/humidity_string"
                    android:layout_above="@id/tvWind"
                    android:layout_toRightOf="@id/tvTemperature"
                    android:textSize="18dp"
                    android:paddingLeft="20dp"/>

            <ImageView
                    android:id="@+id/imIcon"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_above="@id/tvDescription"
                    android:paddingLeft="5dp"
                    android:src="@mipmap/ic_launcher_round"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>